# Comp-Distribuida

./: .multiplicacaoMatriz.py.swp  Dockerfile  Dockerfile.save  aula5.py  aula6.py  docker-compose.yml  exercicio1.py  exercicio2.py  monte_carlo_sequencial.py  multiplicacaoMatriz.py  multiplicacaoMatrizThread.py  olamundo.py  programa.py  setup_ssh.sh
aula9_grpc/: cliente.py  notas.proto  notas_pb2_grpc.py  servidor.py
entrega1_grpc_pdf/client_python/: client.py  file_processor_pb2.py  file_processor_pb2_grpc.py
entrega1_grpc_pdf/proto/: file_processor.proto
entrega1_grpc_pdf/server_cpp/: CMakeLists.txt  file_processor.grpc.pb.cc  file_processor.grpc.pb.h  file_processor.pb.cc  file_processor.pb.h  server.cpp
projeto_cpp/: CMakeLists.txt  cliente_cpp.cpp  servidor_cpp.cpp
projeto_python/: calculator.proto  calculator_pb2.py  calculator_pb2_grpc.py  cliente_py.py  servidor_py.py
